--- a/custom_components/cloudflare_speed_test/translations/en.json
+++ b/custom_components/cloudflare_speed_test/translations/en.json
@@ -4,12 +4,9 @@
       "user": {
         "title": "Cloudflare Speed Test Setup",
         "data": {
-          "speed_test_interval": "Speed test run interval (minutes)"
-        }
-      },
-      "init": {
-        "data": {
-          "speed_test_interval": "Speed test run interval (minutes)"
+          "speed_test_interval": "Speed test run interval (minutes)",
+          "connection_timeout": "Connection timeout (seconds)",
+          "read_timeout": "Read timeout (seconds)"
         }
       }
     }
@@ -18,7 +15,9 @@
     "step": {
       "init": {
         "data": {
-          "speed_test_interval": "Speed test run interval (minutes)"
+          "speed_test_interval": "Speed test run interval (minutes)",
+          "connection_timeout": "Connection timeout (seconds)",
+          "read_timeout": "Read timeout (seconds)"
         }
       }
     }
